# robotics_software_engineer

./: compile_commands.json
.cache/clangd/index/: drive_circle.cpp.73C4F114CDA4D74A.idx  drive_multi_circle.cpp.51429EEF953AE38E.idx  drive_spiral.cpp.3A79D2C4EBB76704.idx
module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/include/: task1.h  task3.h
module_1_assignment/src/: task1.cpp  task1_codes.cpp  task1_main.cpp  task2.cpp  task3_codes.cpp  task3_main.cpp
module_2_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/launch/: multi_node_circle.launch.py  multi_node_circle.py  multi_node_spiral.py  spawn_5_bots.launch.py  spawn_multi_bots.py
module_2_assignment/src/: drive_circle.cpp  drive_multi_circle.cpp  drive_spiral.cpp  drive_too_n_fro.cpp  task_3.cpp  task_4.cpp
